# Agrego

./: AUTHORS  README.md
source/: AUTHORS  INSTALL  Makefile.am  README  agregate.c  configure.ac  connexion.c  handshake.c  log_save.c  ping.c  xiniparser.c  xlib.c
source/cunit/: main.c  xcunit.c
source/headers/: connexion.h  connexiontab.h  endpoint.h  handshake.h  log_save.h  ping.h
source/iniparser/: dictionary.c  dictionary.h  iniparser.c
source/local/: endpoint.c
source/scripts/: agrego-manage-endpoint.8  agrego-manage-endpoint.sh  agrego.ini  agrego.init  control-distant  control-local  logrotate_script  postrm  prerm
trunk/source/: COPYING  INSTALL  LICENSE  Makefile  Makefile.am  agregate.c  agrego-Doxyfile  agrego.c  agrego.ini  bootstrap  configure.ac  connexiontab.c  log_save.c  main.c  tuntap.c
trunk/source/cunit/: agrego_cunit.h  handshake.c  xcunit.h
trunk/source/distant/: endpoint.c  handshake.c
trunk/source/headers/: agregate.h  agrego.h  tuntap.h  xiniparser.h  xlib.h
trunk/source/local/: handshake.c
trunk/source/scripts/: agrego-endpoint.8  agrego-manage-endpoint.8  agrego-manage-endpoint.sh  agrego.ini  agrego.init  makedeb.sh  postinst  prerm  start.sh  stop.sh
wiki/: ArchiExample.wiki  DeployAgreGo.wiki  Documentation.wiki  HowAgregoDaemonWorksInternally.wiki
